--- a/EmotionalChatBot_V5/requirements.txt
+++ b/EmotionalChatBot_V5/requirements.txt
@@ -1,6 +1,7 @@
 langgraph>=0.2.0,<0.7.0
 langchain-core>=0.3.0,<0.4.0
 langchain-openai>=0.2.0
+langsmith>=0.4.0
 pydantic>=2.0
 PyYAML>=6.0
 python-dotenv>=1.0
