接入数据库读写：loader/memory_writer 按早读晚写优先走 DBManager

--- a/EmotionalChatBot_V5/env.example
+++ b/EmotionalChatBot_V5/env.example
@@ -13,3 +13,7 @@ LANGCHAIN_PROJECT=LTSRChatbot-dev
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-4o
 
+# --- Database (Postgres / Supabase) ---
+# Async SQLAlchemy URL example:
+# postgresql+asyncpg://USER:PASSWORD@HOST:5432/DBNAME
+DATABASE_URL=
